--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
+	"start": "npm run build & concurrently --kill-others \"npm run serve-api\" \"npm run serve\"",
+    "serve": "ng serve --proxy-config proxy.conf.json",
+    "build": "ng build --output-path=public",
+    "serve-api": "nodemon server",    
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
