--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "core-js": "^2.4.1",
     "express": "^4.16.2",
     "mongodb": "^3.0.2",
+    "mongoose": "^5.0.9",
     "ng2-dnd": "^4.0.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
