--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "^4.16.2",
     "mongodb": "^3.0.2",
     "mongoose": "^5.0.9",
+    "mongoose-auto-increment": "^5.0.1",
     "multer": "^1.3.0",
     "ng2-dnd": "^4.0.0",
     "rxjs": "^5.1.0",
