--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
     "express": "^4.16.2",
+    "fast-csv": "^2.4.1",
     "mongodb": "^3.0.2",
     "mongoose": "^5.0.9",
     "mongoose-auto-increment": "^5.0.1",
